[fix] alignment

--- a/src/components/landing/featured/Featured.scss
+++ b/src/components/landing/featured/Featured.scss
@@ -6,23 +6,23 @@
   margin-bottom: 5vh;
 
   .landing_featured__title {
-    @include primary--font(
-      $size: 3em,
+    @include primary--font($size: 3em,
       $color: $altSecondaryColor,
       $weight: bold,
-      $lh: 2
-    );
+      $lh: 2);
   }
 
   .landing_featured__artist_cards {
+    text-align: center;
+
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    justify-content: space-around;
+
 
     .landing_featured__artist_card {
       background-color: $secondaryColor;
       border-radius: 20px 20px 20px 20px;
-      box-shadow: 9px 9px 5px -6px rgba(0, 0, 0, 0.55);
 
       margin: 10px;
       padding: 30px;
@@ -34,15 +34,15 @@
       }
 
       .landing_featured__artist_name {
-        @include primary--font(
-          $size: 1.5em,
+        @include primary--font($size: 1.5em,
           $color: $white,
-          $lh: 2
-        );
+          $lh: 2);
       }
 
       .landing_featured__artist_genre {
         @include secondary--font($size: 1em, $color: $white);
+
+        cursor: pointer;
 
         border: 2px $white solid;
         border-radius: 10px 10px 10px 10px;
